HELL171 & 172: Fixed product titles being cut off and prices collapsing into the same line in wholesale view

--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -49,8 +49,8 @@ $hellenicblue: rgb(0, 140, 255);
         text-decoration: none;
         color: #000000;
         align-self: flex-start;
-        padding-left: 10px;
-        margin: 5px;
+        padding-left: 2px;
+        margin: 2px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -71,7 +71,7 @@ $hellenicblue: rgb(0, 140, 255);
         }
         .wholesale-container {
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
             font-size: 12px;
             .bold {
                 font-weight: bold;
